src/test/deca/context/invalid/created/println.deca
// Resultats:
//    Erreur contextuelle
//    Ligne 7: type attendu : int, float ou string

{
    println(true);
}